<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

    <androidx.viewpager2.widget.ViewPager2
      android:id="@+id/view_pager_main"
      android:layout_width="409dp"
      android:layout_height="0dp"
      android:layout_marginBottom="1dp"
      app:layout_constraintBottom_toTopOf="@+id/tabs_main"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.tabs.TabLayout
      android:id="@+id/tabs_main"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_marginEnd="1dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintEnd_toStartOf="parent">

        <com.google.android.material.tabs.TabItem
          android:id="@+id/tab_owned_books"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Owned" />

        <com.google.android.material.tabs.TabItem
          android:id="@+id/tab_borrowed_books"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Lent" />

        <com.google.android.material.tabs.TabItem
          android:id="@+id/tab_search"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Search" />

        <com.google.android.material.tabs.TabItem
          android:id="@+id/tab_location"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Map" />

        <com.google.android.material.tabs.TabItem
          android:id="@+id/tab_settings"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Settings" />
    </com.google.android.material.tabs.TabLayout>

</androidx.constraintlayout.widget.ConstraintLayout>