<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="300dp"
  android:layout_height="wrap_content"
  android:layout_gravity="center"
  android:padding="8dp"
  android:background="@drawable/cardshape"
  android:orientation="vertical"
  tools:context=".book.AddBookFragment">

  <Button
    android:id="@+id/add_book_add_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:layout_margin="5dp"
    android:background="@drawable/return_circle"
    android:text="ADD BOOK"
    android:textColor="#FFFFFF"></Button>
  <EditText
    android:id="@+id/add_book_isbn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:layout_margin="5dp"
    android:padding="8dp"
    android:background="#22191919"
    android:hint="ISBN"></EditText>
  <EditText
    android:id="@+id/add_book_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:layout_margin="5dp"
    android:padding="8dp"
    android:background="#22191919"
    android:hint="Title"></EditText>
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <EditText
      android:id="@+id/add_book_author"
      android:layout_width="251dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_margin="5dp"
      android:padding="8dp"
      android:background="#22191919"
      android:hint="Author"></EditText>

    <ImageButton
      android:id="@+id/add_book_image"
      android:layout_width="38dp"
      android:layout_height="38dp"
      android:layout_margin="5dp"
      android:layout_marginStart="5dp"
      android:layout_marginEnd="5dp"
      android:background="@drawable/camera_circle"
      android:scaleType="fitXY"
      app:srcCompat="@drawable/add_photo_icon" />
  </LinearLayout>
  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:paddingHorizontal="5dp"
    android:paddingVertical="8dp"
    android:text="Enter your books' information below and we'll add it to your collection"
    android:textAppearance="@style/TextAppearance.AppCompat.Body1"></TextView>

</LinearLayout>