<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".book.BorrowedFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.viewpager2.widget.ViewPager2
      android:id="@+id/view_pager_borrowed"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tabs_sub_borrowed"
      android:layout_width="match_parent"
      android:layout_height="0dp" />


    <com.google.android.material.tabs.TabLayout
      android:id="@+id/tabs_sub_borrowed"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:layout_width="match_parent"
      android:layout_height="0dp">

        <com.google.android.material.tabs.TabItem
          android:id="@+id/tabs_sub_borrowed_borrowed"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Borrowed" />

        <com.google.android.material.tabs.TabItem
          android:id="@+id/tabs_sub_borrowed_requested"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Requested" />

        <com.google.android.material.tabs.TabItem
          android:id="@+id/tabs_sub_borrowed_accepted"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Accepted" />


    </com.google.android.material.tabs.TabLayout>

</androidx.constraintlayout.widget.ConstraintLayout>